# solid-octo-succotash

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/api/: README.md
app/canonicalization/: base.py  competitions.py  partners.py  registry_loader.py  tags.py  teams.py  topics.py  vouchers.py
app/contracts/: analytics_records.py  api_dto.py  graph_records.py  warehouse_rows.py
app/core/: config.py  constants.py  exceptions.py  ids.py  logging.py  security.py  time.py  versioning.py
app/db/: checkpoints.py  job_runs.py  metadata_db.py  model_registry.py  mysql_client.py  neo4j_client.py  source_inventory.py  transaction.py
app/extractors/: ai_articles.py  app_users.py  avatars.py  awards_and_achievements.py  badges.py  base.py  chat_conversations.py  chat_direct_pairs.py  chatbot_conversations.py  chatbot_messages.py  chatbot_tool_calls.py  coin_transactions.py  comments.py  content_engagement_daily.py  daily_metrics.py  discussion_events.py  discussions.py  financials.py  fixture_polls.py  fixtures.py  heatmap_events.py  influencer_leagues.py  leagues.py  lms_competitions.py  moderation_events.py  news.py  notification_content.py  notification_content_daily.py  notification_preferences.py  notification_recipients.py  partner_reward_catalog.py  partner_reward_inventory.py  partner_reward_redemptions.py  posts.py  prediction_discussions.py  prediction_duels.py  predictions.py  private_league_members.py  private_league_themes.py  private_leagues.py  (+25 more)
app/loaders/: __init__.py  analytics_loader.py  base.py  batch_writer.py  (+5 more)
configs/: base.yaml  dev.yaml  gds.yaml  inference.yaml  logging.yaml  ontology.yaml  prod.yaml  serving.yaml  source_inclusion.yaml  staging.yaml  weighting.yaml
docs/: architecture.md  ontology.md  source-inclusion-decisions.md  source-inventory.md  warehouse-to-graph-mapping.md
migrations/: README.md
scripts/: audit_graph.py  audit_warehouse.py  migrate_metadata.py  migrate_neo4j.py  run_full_backfill.py  run_incremental_sync.py
(+219 files in other folders)
