[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-pulse-kg"
version = "0.1.0"
description = "Production knowledge graph platform for Project Pulse"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Project Pulse Team" }
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "sqlalchemy>=2.0.32,<3.0.0",
  "pymysql>=1.1.1,<2.0.0",
  "neo4j>=5.23.0,<6.0.0",
  "pandas>=2.2.2,<3.0.0",
  "numpy>=2.0.1,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "tenacity>=8.5.0,<9.0.0",
  "structlog>=24.4.0,<25.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "alembic>=1.13.2,<2.0.0",
  "psycopg[binary]>=3.2.1,<4.0.0",
  "prometheus-client>=0.20.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pytest-asyncio>=0.23.8,<1.0.0",
  "ruff>=0.6.2,<1.0.0",
  "black>=24.8.0,<25.0.0",
  "mypy>=1.11.1,<2.0.0",
  "types-PyYAML>=6.0.12.20240808",
  "types-python-dateutil>=2.9.0.20240316"
]

[project.scripts]
pulse-api = "app.main:main"
pulse-backfill = "scripts.run_full_backfill:main"
pulse-sync = "scripts.run_incremental_sync:main"
pulse-leiden = "scripts.run_leiden:main"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "SIM",
  "C4"
]
ignore = [
  "E501",
  "UP047"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true